# DeviceSecurityKit

./: .metadata  CHANGELOG.md  COMMIT_PLAN.md  CONTRIBUTING.md  GITHUB_SUBMISSION_SUMMARY.md  IMPROVEMENTS.md  MULTI_PLATFORM_SUPPORT.md  PUB_SCORE_CHECKLIST.md  README.md  RELEASE_NOTES.md  analysis_options.yaml  pubspec.yaml
.github/: PUB_DEV_SETUP.md
.github/workflows/: publish.yml
android/: build.gradle.kts  settings.gradle.kts
benchmark/: INTEGRATION_EXAMPLE.md  README.md  benchmark_utils.dart  device_security_benchmark.dart
doc/: API.md  ARCHITECTURE.md  CODE_STYLE.md  PLATFORM_SUPPORT.md  QUICK_REFERENCE.md  USER GUIDE.md
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt
ios/: device_security_kit.podspec
lib/: device_security_kit.dart  device_security_kit_method_channel.dart  device_security_kit_platform_interface.dart  device_security_kit_web.dart
linux/: CMakeLists.txt  device_security_kit_plugin.cc  device_security_kit_plugin.h  device_security_kit_plugin_private.h
linux/include/device_security_kit/: device_security_kit_plugin.h
linux/test/: device_security_kit_plugin_test.cc
macos/: device_security_kit.podspec
test/: device_security_kit_method_channel_test.dart  device_security_kit_test.dart
windows/: CMakeLists.txt  device_security_kit.cpp  device_security_kit.h  device_security_kit_plugin.cpp  device_security_kit_plugin.h  device_security_kit_plugin_c_api.cpp
windows/include/device_security_kit/: device_security_kit_plugin_c_api.h
windows/test/: device_security_kit_plugin_test.cpp
(+30 files in other folders)
